--- a/favorite-color/pages/layout.html
+++ b/favorite-color/pages/layout.html
@@ -1,7 +1,7 @@
 {{define "layout"}}
 <html>
 <head>
-    <title>Imaging</title>
+    <title>GoTH HackDay</title>
     <script async src="https://cdn.byu.edu/byu-theme-components/2.x.x/byu-theme-components.min.js"></script>
     <link rel="stylesheet" href="https://cdn.byu.edu/byu-theme-components/2.x.x/byu-theme-components.min.css" media="all">
     <!-- HTMX -->
@@ -10,7 +10,7 @@
 </head>
 <body>
 <byu-header>
-    <h1 slot="site-title">Imaging</h1>
+    <h1 slot="site-title">GoTH HackDay 2024</h1>
 </byu-header>
 <div>
 {{template "content" .}}
