--- a/profile/pages/index.html
+++ b/profile/pages/index.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<h1>Document Search</h1>
+<h1>Profile</h1>
 <div>
     <h2>{{.Greeting}}</h2>
     <form hx-post="/ajax/searchDocs"
