update profile works

--- a/profile/pages/index.html
+++ b/profile/pages/index.html
@@ -5,9 +5,9 @@
           hx-target="#results"
           hx-swap="outerHTML">
         <label for="firstName">First Name:</label>
-        <input id="firstName" type="text" name="firstName" value="{{.Profile.FirstName}}"/>
+        <input id="firstName" type="text" name="FirstName" value="{{.Profile.FirstName}}"/>
         <label for="lastName">Last Name:</label>
-        <input id="lastName" type="text" name="lastName" value="{{.Profile.LastName}}"/>
+        <input id="lastName" type="text" name="LastName" value="{{.Profile.LastName}}"/>
         <button type="submit">
             Save Profile
         </button>
