got fav color working and listening to kafka

--- a/favorite-color/pages/index.html
+++ b/favorite-color/pages/index.html
@@ -1,6 +1,7 @@
 {{define "content"}}
-<h1>Favorite Color</h1>
+<h1>{{.Profile.FirstName}}'s Favorite Color</h1>
 <div>
-
+    <h2>{{.Color}}</h2>
+    <div style="width: 100px; height: 100px; background-color: {{.Color}}"></div>
 </div>
 {{end}}
